fix: update dropdown active link styling to improve visibility; set background color to transparent

--- a/staticfiles/assets/css/style.css
+++ b/staticfiles/assets/css/style.css
@@ -469,6 +469,7 @@ input:focus, textarea:focus, select:focus {
 
 .dropdown li a.active{
     color: var(--pink) !important;
+    background-color: transparent;
 }
 .dropdown li a:focus{
     color: var(--pink) !important;
